<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/donationHistoryListYearTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:gravity="center"/>

            <TextView
                android:id="@+id/donationHistoryListDayTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/purple_200"/>

            <TextView
                android:id="@+id/donationHistoryListMonthTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/donationHistoryListIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uid"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="@color/teal_200"/>

            <TextView
                android:id="@+id/donationHistoryListAmountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectDonateAmount"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="@color/purple_500"/>



        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>