<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    style="@style/CardView.Light">

    <LinearLayout
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/eventListYearTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:gravity="center"/>

            <TextView
                android:id="@+id/eventListDayTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#ff9382"/>

            <TextView
                android:id="@+id/eventListMonthTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1.9"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="#ff9382"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ProgressBar
                    android:layout_weight="1.6"
                    android:id="@+id/eventListProgressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minWidth="320dp"
                    android:scaleY="3"
                    android:max="100" />

                <TextView
                    android:id="@+id/eventListProgress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/percent"
                    android:padding="5dp" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventListStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="#ff9382"/>

            <Button
                android:id="@+id/eventListViewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:backgroundTint="#ff9382"/>

        </LinearLayout>





    </LinearLayout>

</androidx.cardview.widget.CardView>