<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.organization.OrganizationViewActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/organizationViewCustomizeToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/organizationViewImageView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_business_24"
                app:civ_border_color="@color/gray"
                app:civ_border_width="2dp"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/organizationViewRegisteredDateTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/registerDateTime"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/organizationViewNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/name"
                style="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/organizationViewTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/type"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/organizationViewRegistrationNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/registrationNumber"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/organizationViewEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/email"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/organizationViewPhoneTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/phone"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/organizationViewDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/description"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/organizationViewAddressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/address"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <TextView
                android:id="@+id/organizationViewStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/status"
                android:gravity="center"
                android:background="@color/yellow"
                style="@style/TextAppearance.AppCompat.Title"/>

            <Button
                android:id="@+id/organizationViewVerifyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/verify"
                android:backgroundTint="@color/green" />


        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/organizationViewCustomizeToolbar"
        layout="@layout/customize_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>