<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.event.EventViewActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventViewCustomizeToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/eventViewImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/eventViewCreatedDateTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/createdDateTime"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/eventViewTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/title"
                style="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/eventViewDurationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/duration"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/eventViewDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/description"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/eventViewPersonInChargeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/personInCharge"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/progress"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:orientation="vertical"
                android:background="@drawable/round_rectangle_no_filled">

                <ProgressBar
                    android:id="@+id/eventViewProgressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:minWidth="320dp"
                    android:scaleY="3"
                    android:max="100" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/eventViewCurrentFundTextView"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/currentFund"
                        android:layout_marginStart="10dp"
                        android:gravity="start"/>

                    <TextView
                        android:id="@+id/eventViewTargetFundTextView"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/targetFund"
                        android:layout_marginEnd="10dp"
                        android:gravity="end" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/eventViewStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/status"
                android:gravity="center"
                android:background="@color/yellow"
                style="@style/TextAppearance.AppCompat.Title"/>

            <LinearLayout
                android:id="@+id/buttonViewLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:visibility="gone">

                <Button
                    android:id="@+id/eventViewAcceptButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/accept"
                    android:backgroundTint="@color/green"
                    style="@style/Widget.AppCompat.ButtonBar"/>

                <Button
                    android:id="@+id/eventViewDeclineButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/decline"
                    android:backgroundTint="@color/red"
                    style="@style/Widget.AppCompat.ButtonBar"/>

            </LinearLayout>

            <Button
                android:id="@+id/eventViewPublishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/publish"
                android:backgroundTint="@color/green"
                style="@style/Widget.AppCompat.ButtonBar"
                android:gravity="center"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/eventViewCustomizeToolbar"
        layout="@layout/customize_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>