<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    style="@style/CardView.Light">

    <LinearLayout
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/organizationListProfileImageView"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_business_24"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/gray" />


        <LinearLayout
            android:layout_weight="1.8"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/organizationListNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:padding="5dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <TextView
                android:id="@+id/organizationRegisterDateTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerDateTime"
                android:padding="5dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>



        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/organizationListStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:padding="5dp"
                android:gravity="center"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

            <Button
                android:id="@+id/organizationListViewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:backgroundTint="#ffb382"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>